# finbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  appwsrv.Dockerfile  dev.Dockerfile  docker-compose.prod.yml  docker-compose.yml  docker.env.sh  docker.prod.env.sh  finbot-docker.service.tpl  finbotctl  finbotwsrv.Dockerfile  histwsrv.Dockerfile  ideas.md  local.env.sh  package-lock.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  runtime-selenium.Dockerfile  runtime.Dockerfile  schedsrv.Dockerfile  secret.env.sh.tpl  secret.env.tpl  snapwsrv.Dockerfile  tester.Dockerfile
.github/: dependabot.yml
.github/workflows/: check-version-bump.yml  docker.yml  js-lint.yml  openapi-schema-lint.yml  py-lint.yml  py-system-tests.yml  py-unit-tests.yml  release.yml  shell-lint.yml  system-tests.yml  ts-lint.yml  versioning.yml
db/: finbot.sql
doc/: snapshot-reporting.wsd  topology.wsd
envs/: dev.env  env-config.prod.js  prod.env  secrets.env.tpl
finbot/: _version.py
finbot/apps/: http_base.py
finbot/clients/: __init__.py  app.py  base.py  finbot.py  history.py  sched.py  snap.py  worker.py
finbot/core/: async_.py  collections.py  crypto.py  crypto_market.py  dbutils.py  description_sanitizer.py  email_delivery.py  email_templates.py  environment.py  errors.py  fx.py  fx_market.py  jobs.py  jwt.py  kv_store.py  logging.py  merchant_enricher.py  notifier.py  plaid.py  pydantic_.py  qonto_api.py  rmq.py  saxo.py  schema.py  secure.py  serialization.py  spec_tree.py  spending_categories.py  spending_categorizer.py  temporal_.py  timeseries.py  tracer.py  typing_extensions.py  utils.py  web_service.py
finbot/model/: __init__.py  base.py  repository.py
finbot/providers/: __init__.py  aegon_targetplan_uk.py  amex_us.py  barclaycard_uk.py  barclays_uk.py  base.py  binance_us.py  bittrex_us.py  credit_agricole_fr.py  dummy_uk.py  errors.py  factory.py  google_sheets.py  hl_uk.py  kraken_us.py  lending_works_uk.py  october_fr.py  plaid_us.py  playwright_base.py  playwright_based.py  qonto_us.py  saxo_gw_fr.py  schema.py  selenium_based.py  suravenir_fr.py  vanguard_uk.py
finbot/scripts/: wait_deps.py
finbot/tasks/: __init__.py  base.py  health.py  user_account_valuation.py
migrations/: env.py
migrations/versions/: 0213400aeb85_add_mobile_number.py  185f0bdef74f_rename_underlying_ccy_to_currency.py  1cb6a1c6aa41_add_isin_code_to_item_snapshot_history.py  1fa647637abf_add_asset_type_columns.py  22578cf02898_add_underlying_ccy_to_snapshot_and_.py  23924d787025_add_is_demo_to_user_account_model.py  2a508081682f_add_sub_account_type.py  310f03145878_email_field_should_be_unique.py  3574c0452805_add_sub_account_sub_type_to_.py  418d0d0013a2_distributed_trace.py  4305433d5c7a_drop_distributed_tracing_table.py  4ff5c47e587d_plaid_settings.py  55acd2598fc5_include_created_at_updated_at_.py  5ecd6c0b4675_add_liabilities_column.py  66e9a9d27434_add_trace_to_snapshot_and_report.py  6ed999372bf3_transactions.py  73e4a88e4e69_add_linked_account_colour.py  75027cc0f5c9_re_run_asset_class_type_migration.py  764a6f372b53_drop_user_account_plaid_settings.py  7add1f3d40ce_add_generic_key_value_store.py  7d3d027c4bbb_add_frozen_column_linked_accounts.py  84a25e306a45_set_foreign_key_ondelete.py  (+19 more)
tools/: accounts.tpl.json  autorestart  autorestart.sh  backfill-merchants.py  backfill-recurring-transactions  backfill-transaction-matches  banned-keywords.py  bash-utils.sh  categorize-history  check-env.sh  crypt  dump-account  dump-linked-account  export-openapi-schema.py  finbot-wait  finbotctl-enable-service  finbotctl-init  finbotctl-restart  finbotctl-start  finbotctl-stop  finbotdb  freeze-py  generate-ts-client  get-env.sh  histwsrv-tester  hydrate.json  init-dev.sh  init-vault.sh  lint-schema.py  pip-compile-all  pip-upgrade-all  providers-tester  run  run-web-app.sh  run-web-service.sh  run-webapp-dev.sh  run-webapp.sh  show-transaction-matches  snapwsrv-tester  snapwsrv_tester  (+4 more)
webapp/: .ENV  .eslintrc  .eslintrc.cjs  .eslintrc.js  Dockerfile  components.json  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
(+563 files in other folders)
