[project]
name = "finbot"
dynamic = ["version"]
dependencies = [
    "aiohttp==3.13.5",
    "alembic==1.18.4",
    "bcrypt==5.0.0",
    "cachetools<7",
    "cffi==2.0.0",
    "cryptography==47.0.0",
    "fastapi[standard]<1",
    "gspread==6.2.1",
    "gunicorn==25.3.0",
    "jsonschema==4.26.0",
    "krakenex==2.2.2",
    "oauth2client==4.1.3",
    "orjson==3.11.8",
    "plaid-python==39.2.0",
    "playwright==1.59.0",
    "price-parser==0.5.1",
    "psycopg2==2.9.12",
    "pycoingecko==3.2.0",
    "pydantic==2.13.3",
    "python-binance==1.0.36",
    "python-gnupg==0.5.6",
    "python-jose[cryptography]<4",
    "requests==2.33.1",
    "sqlalchemy==2.0.49",
    "temporalio<2",
    "twilio==9.10.5",
    "uvicorn<1",
    "openai>=2",
    "rapidfuzz>=3",
]

[project.optional-dependencies]
dev = [
    "mypy==2.1.0",
    "pytest==9.0.3",
    "pytest-asyncio<2",
    "ruff==0.15.12",
    "semver==3.0.4",
    "sqlalchemy-stubs<1",
    "types-cachetools<8",
    "types-requests==2.33.0.20260408",
    "watchdog[watchmedo]<7",
    "yfinance<1",
]

[tool.ruff]
exclude = [
    'migrations/',
    'venv/',
    'webapp/'
]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "Q", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.dynamic]
version = {attr = "finbot._version.__version__"}
